exp-unitycatalog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uc-service
  namespace: ${UC_NAMESPACE}
spec:
  selector:
    app: uc
  ports:
    - port: ${UC_PORT}
      targetPort: ${UC_PORT}
      protocol: TCP
