exp-unitycatalog/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: uc-route
  namespace: ${UC_NAMESPACE}
spec:
  to:
    kind: Service
    name: uc-service
  port:
    targetPort: ${UC_PORT}
  host: ${UC_ROUTE_HOST}
